--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/forms": "~8.2.13",
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
+    "@angular/pwa": "^0.803.23",
     "@angular/router": "~8.2.13",
+    "@angular/service-worker": "~8.2.13",
+    "ngx-quill": "^7.3.12",
+    "quill": "^1.3.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
